--- a/extension/src/manage.css
+++ b/extension/src/manage.css
@@ -1,6 +1,8 @@
 .data-container{
     position: relative;
-    height: 400px;
+    height: 200px;
+    width: 200px;
+    border: 1px solid black;
 }
 
 .data{
@@ -8,16 +10,27 @@
     z-index: 1;
 }
 
-.data-menu{
-    position: relative;
-    top: 10px;
-    right: 10px;
-    width: 600px;
-    height: 400px;
-    z-index: 2;
-    font-size: 200%;
+.data{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
-.test{
-    color: darkred;
+.data-menu{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 10%;
+    height: 10%;
+    z-index: 2;
+}
+
+.limit-size{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding: 0px;
 }
